  * uninit: Avoid failing final removal in some direct mode repositories
    due to file modes.
  * S3: Deal with AWS ACL configurations that do not allow creating or
    checking the location of a bucket, but only reading and writing content to
    it.
  * resolvemerge: New plumbing command that runs the automatic merge conflict
    resolver.

 -- Joey Hess <joeyh@debian.org>  Wed, 09 Jul 2014 23:29:21 -0400

git-annex (5.20140709) unstable; urgency=medium

  * Fix race in direct mode merge code that could cause all files in the
    repository to be removed. It should be able to recover repositories
    experiencing this bug without data loss. See:
    http://git-annex.branchable.com/bugs/bad_merge_commit_deleting_all_files/
  * Fix git version that supported --no-gpg-sign.
  * Fix bug in automatic merge conflict resolution, when one side is an
    annexed symlink, and the other side is a non-annexed symlink.
  * Really fix bug that caused the assistant to make many unncessary
    empty merge commits.

 -- Joey Hess <joeyh@debian.org>  Wed, 09 Jul 2014 15:28:03 -0400

git-annex (5.20140707) unstable; urgency=medium

  * assistant: Fix bug, introduced in last release, that caused the assistant
    to make many unncessary empty merge commits.
  * assistant: Fix one-way assistant->assistant sync in direct mode.
  * Fix bug in annex.queuesize calculation that caused much more
    queue flushing than necessary.
  * importfeed: When annex.genmetadata is set, metadata from the feed
    is added to files that are imported from it.
  * Support users who have set commit.gpgsign, by disabling gpg signatures
    for git-annex branch commits and commits made by the assistant.
  * Fix memory leak when committing millions of changes to the git-annex
    branch, eg after git-annex add has run on 2 million files in one go.
  * Support building with bloomfilter 2.0.0.
  * Run standalone install process when the assistant is started