@@ -11,6 +11,8 @@ git-annex (5.20140710) UNRELEASED; urgency=medium
     it.
   * resolvemerge: New plumbing command that runs the automatic merge conflict
     resolver.
+  * Deal with change in git 2.0 that made indirect mode merge conflict
+    resolution leave behind old files.
 
  -- Joey Hess <joeyh@debian.org>  Wed, 09 Jul 2014 23:29:21 -0400
 
